added card page full

--- a/marmelad/_pages/card-project-page.html
+++ b/marmelad/_pages/card-project-page.html
@@ -65,6 +65,8 @@ path: [
 
   {% include "equipment-block.html" %}
 
+  {% include "choose-design.html" %}
+
   <div block="other-projects">
     <div elem="section">
       <div elem="inner" class="contain">
