--- a/static/card-project-page.html
+++ b/static/card-project-page.html
@@ -605,6 +605,74 @@
   </div>
 </div><!-- equipment-block -->
 
+  <div class="choose-design">
+  <div class="choose-design__section">
+    <div class="choose-design__inner contain">
+      <div class="choose-design__wrapper">
+        <div class="choose-design__left">
+          <div class="choose-design__head">
+            <h2>
+              Выбери
+              свой дизайн
+            </h2>
+            <button class="choose-design__button-order button-default button-default--other">
+              Заказать выбранный дизайн
+            </button>
+          </div>
+          <div class="choose-design__img">
+            <img src="img/choose-design-img.png" alt="">
+          </div>
+        </div>
+        <div class="choose-design__right">
+          <div class="choose-design__head choose-design__head--mobile">
+            <h2>
+              Выбери
+              свой дизайн
+            </h2>
+            <button class="choose-design__button-order button-default button-default--other">
+              Заказать выбранный дизайн
+            </button>
+          </div>
+          <div class="choose-design__colors">
+            <div class="choose-design__colors-title">Выберите цвет</div>
+            <div class="choose-design__colors-items">
+              <button class="choose-design__colors-item choose-design__colors-item--vinous js-choose-color" type="button"></button>
+              <button class="choose-design__colors-item choose-design__colors-item--red js-choose-color _is-active" type="button"></button>
+              <button class="choose-design__colors-item choose-design__colors-item--blue js-choose-color" type="button"></button>
+              <button class="choose-design__colors-item choose-design__colors-item--green js-choose-color" type="button"></button>
+              <button class="choose-design__colors-item choose-design__colors-item--grey js-choose-color" type="button"></button>
+              <button class="choose-design__colors-item choose-design__colors-item--dark-grey js-choose-color" type="button"></button>
+              <button class="choose-design__colors-item choose-design__colors-item--brown js-choose-color" type="button"></button>
+              <button class="choose-design__colors-item choose-design__colors-item--black js-choose-color" type="button"></button>
+
+            </div>
+          </div>
+          <div class="choose-design__surface">
+            <button class="choose-design__surface-name js-choose-surface" type="button">
+              Кровля
+              металлочерепица
+            </button>
+            <button class="choose-design__surface-name js-choose-surface _is-active" type="button">
+              Кровля
+              профлист
+            </button>
+            <button class="choose-design__surface-name js-choose-surface" type="button">
+              Окна, доборы,
+              подшива
+            </button>
+            <button class="choose-design__surface-name js-choose-surface" type="button">
+              Террасы
+            </button>
+            <button class="choose-design__surface-name js-choose-surface" type="button">
+              Фасады
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div><!-- choose-design -->
+
   <div class="other-projects">
     <div class="other-projects__section">
       <div class="other-projects__inner contain">
