--- a/marmelad/_blocks/shares-block/shares-block.html
+++ b/marmelad/_blocks/shares-block/shares-block.html
@@ -1,43 +1,64 @@
 <div block="shares-block">
   <div elem="section">
-    <div elem="inner" class="contain">
-      <div elem="head">
-        <h2>Акции</h2>
-      </div>
-      <div elem="nav"></div>
-      <div elem="container">
-        <div elem="items">
-          <div elem="item">
-            <div block="share-thumb">
-              <div elem="body">
-                <div elem="img">
-                  <img src="img/share-thumb-img.jpg" alt="">
-                </div>
-                <div elem="content">
-                  <div elem="name">Акция от ЛокоБанк </div>
-                  <div elem="text">
-                    При заказе дома или бани стоимость гостевого дома всего 79 000 руб.
+    <div elem="inner">
+      <div elem="wrapper" class="js-shares-block-wrapper">
+        <div elem="head">
+          <h2>Акции</h2>
+        </div>
+        <div elem="nav-slider">
+          <div class="swiper-button-prev"></div>
+          <div class="swiper-button-next"></div>
+        </div>
+        <div elem="container" class="swiper js-shares-block-slider">
+          <div elem="items" class="swiper-wrapper">
+            <div elem="item" class="swiper-slide">
+              <div block="share-thumb">
+                <div elem="body">
+                  <div elem="img">
+                    <img src="img/share-thumb-img.jpg" alt="">
                   </div>
-                  <div elem="date">23.02.2021</div>
-                </div>
-              </div>
-            </div><!-- share-thumb -->
-          </div>
-          <div elem="item">
-            <div block="share-thumb">
-              <div elem="body">
-                <div elem="img">
-                  <img src="img/share-thumb-img2.jpg" alt="">
-                </div>
-                <div elem="content">
-                  <div elem="name">Скидка на проектную документацию</div>
-                  <div elem="text">
-                    При заказе дома или бани стоимость гостевого дома всего 79 000 руб.
+                  <div elem="content">
+                    <div elem="name">Акция от ЛокоБанк </div>
+                    <div elem="text">
+                      При заказе дома или бани стоимость гостевого дома всего 79 000 руб.
+                    </div>
+                    <div elem="date">23.02.2021</div>
                   </div>
-                  <div elem="date">23.02.2021</div>
                 </div>
-              </div>
-            </div><!-- share-thumb -->
+              </div><!-- share-thumb -->
+            </div>
+            <div elem="item" class="swiper-slide">
+              <div block="share-thumb">
+                <div elem="body">
+                  <div elem="img">
+                    <img src="img/share-thumb-img3.jpg" alt="">
+                  </div>
+                  <div elem="content">
+                    <div elem="name">Акция от ЛокоБанк </div>
+                    <div elem="text">
+                      Гостевой домик со скидкой
+                    </div>
+                    <div elem="date">23.02.2021</div>
+                  </div>
+                </div>
+              </div><!-- share-thumb -->
+            </div>
+            <div elem="item" class="swiper-slide">
+              <div block="share-thumb">
+                <div elem="body">
+                  <div elem="img">
+                    <img src="img/share-thumb-img2.jpg" alt="">
+                  </div>
+                  <div elem="content">
+                    <div elem="name">Скидка на проектную документацию</div>
+                    <div elem="text">
+                      Сделайте заказ и получите скидку на АР
+                    </div>
+                    <div elem="date">23.02.2021</div>
+                  </div>
+                </div>
+              </div><!-- share-thumb -->
+            </div>
           </div>
         </div>
       </div>
