--- a/marmelad/_blocks/delivery-block/delivery-block.html
+++ b/marmelad/_blocks/delivery-block/delivery-block.html
@@ -17,7 +17,7 @@
           </div>
         </div>
       </form>
-      <div elem="map"></div>
+      <div elem="map" id="map_delivery"></div>
       <div elem="bottom">
         <div elem="text">
           <p>
