--- a/static/delivery-page.html
+++ b/static/delivery-page.html
@@ -124,7 +124,7 @@
           </div>
         </div>
       </form>
-      <div class="delivery-block__map"></div>
+      <div id="map_delivery" class="delivery-block__map"></div>
       <div class="delivery-block__bottom">
         <div class="delivery-block__text">
           <p>
