added feature  map

--- a/marmelad/_pages/categories-page.html
+++ b/marmelad/_pages/categories-page.html
@@ -127,6 +127,8 @@ path: [
   </div><!-- product-preview -->
 
   {% include "contacts-form.html" %}
+  
+  {% include "feature-map.html" %}
 
   <div block="content-block">
     <p>
