--- a/static/categories-page.html
+++ b/static/categories-page.html
@@ -408,6 +408,17 @@
 </div><!-- contacts-form -->
 
 
+  
+  <div class="feature-map">
+  <div class="feature-map__section">
+    <div class="feature-map__inner contain">
+      <div class="feature-map__head">
+        <h2>Карта построенных обьектов</h2>
+      </div>
+    </div>
+    <div id="feature_map" class="feature-map__map"></div>
+  </div>
+</div><!-- feature-map -->
 
   <div class="content-block">
     <p>
