--- a/marmelad/_pages/catalog-projects-page.html
+++ b/marmelad/_pages/catalog-projects-page.html
@@ -29,6 +29,8 @@ path: [
   {% include "sorting-projects.html" %}
 
   {% include "catalog-projects.html" %}
+
+  {% include "feature-map.html" %}
   
   {% include "contacts-form.html" %}
 
