--- a/static/catalog-projects-page.html
+++ b/static/catalog-projects-page.html
@@ -312,6 +312,32 @@
     </div>
   </div>
 </div><!-- catalog-projects -->
+
+  <div class="feature-map">
+  <div class="feature-map__section">
+    <div class="feature-map__inner contain">
+      <div class="feature-map__head">
+        <h2>Карта построенных обьектов</h2>
+      </div>
+    </div>
+    <div id="feature_map" class="feature-map__map"></div>
+    <!-- <div block="popup-map-thumb">
+      <div elem="body">
+        <div elem="img">
+          <img src="img/photo-reports-img3.jpg" alt="">
+        </div>
+        <div elem="content">
+          <div elem="name">Баня бочка тип 1</div>
+          <div elem="text">Московская область, деревня Посевки</div>
+          <a elem="link-show" class="button-default button-default--large" href="#">
+            Смотреть проект
+          </a>
+        </div>
+      </div>
+    </div> -->
+    <!-- popup-map-thumb -->
+  </div>
+</div><!-- feature-map -->
   
   <div class="contacts-form">
   <div class="contacts-form__section">
