--- a/static/categories-page.html
+++ b/static/categories-page.html
@@ -417,6 +417,21 @@
       </div>
     </div>
     <div id="feature_map" class="feature-map__map"></div>
+    <!-- <div block="popup-map-thumb">
+      <div elem="body">
+        <div elem="img">
+          <img src="img/photo-reports-img3.jpg" alt="">
+        </div>
+        <div elem="content">
+          <div elem="name">Баня бочка тип 1</div>
+          <div elem="text">Московская область, деревня Посевки</div>
+          <a elem="link-show" class="button-default button-default--large" href="#">
+            Смотреть проект
+          </a>
+        </div>
+      </div>
+    </div> -->
+    <!-- popup-map-thumb -->
   </div>
 </div><!-- feature-map -->
 
