--- a/marmelad/_blocks/feature-map/feature-map.html
+++ b/marmelad/_blocks/feature-map/feature-map.html
@@ -6,5 +6,20 @@
       </div>
     </div>
     <div elem="map" id="feature_map"></div>
+    <!-- <div block="popup-map-thumb">
+      <div elem="body">
+        <div elem="img">
+          <img src="img/photo-reports-img3.jpg" alt="">
+        </div>
+        <div elem="content">
+          <div elem="name">Баня бочка тип 1</div>
+          <div elem="text">Московская область, деревня Посевки</div>
+          <a elem="link-show" class="button-default button-default--large" href="#">
+            Смотреть проект
+          </a>
+        </div>
+      </div>
+    </div> -->
+    <!-- popup-map-thumb -->
   </div>
 </div><!-- feature-map -->
