--- a/marmelad/_blocks/_footer/footer.html
+++ b/marmelad/_blocks/_footer/footer.html
@@ -5,7 +5,7 @@
         {% include "logo.html" %}
         <div elem="contacts">
           <a elem="phone" href="#">8 (800) 333-04-77</a>
-          <a elem="button-call" class="button-default" href="#">Заказать звонок</a>
+          <a elem="button-call" class="button-default" data-remodal-target="request" href="#">Заказать звонок</a>
         </div>
       </div>
       <div elem="middle">
