--- a/marmelad/_blocks/_header/header.html
+++ b/marmelad/_blocks/_header/header.html
@@ -14,7 +14,7 @@
                   <a elem="social-link" mods="telegram" href="#"></a>
                 </div>
                 <a elem="phone" href="tel:+88003330477">8 (800) 333-04-77</a>
-                <a elem="call" href="#">Заказать звонок</a>
+                <a elem="call" href="#" data-remodal-target="request">Заказать звонок</a>
                 <button class="button-burger js-button-burger">
                   <span></span>
                 </button>
