--- a/marmelad/_blocks/card-project/card-project.html
+++ b/marmelad/_blocks/card-project/card-project.html
@@ -95,7 +95,7 @@
               </div>
             </div>
             <div elem="cost">
-              <div elem="button" class="button-default">Заказать</div>
+              <button elem="button" class="button-default" data-remodal-target="request" type="button">Заказать</button>
               <div elem="price">
                 <span>200 000 р</span>
                 <strong>132 000 р</strong>
