--- a/marmelad/_blocks/choose-design/choose-design.html
+++ b/marmelad/_blocks/choose-design/choose-design.html
@@ -8,7 +8,7 @@
               Выбери
               свой дизайн
             </h2>
-            <button elem="button-order" class="button-default button-default--other">
+            <button elem="button-order" class="button-default button-default--other" data-remodal-target="request" type="button">
               Заказать выбранный дизайн
             </button>
           </div>
